--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
@@ -16,7 +18,8 @@
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "use-image": "^1.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
